--- a/locales/en/en.cooking.json
+++ b/locales/en/en.cooking.json
@@ -21,5 +21,46 @@
   "commitment": {
     "title": "Strict Adherence to Our Service Charter",
     "text": "At Sahel, we strictly follow our own service charter, designed to guarantee the highest quality standards. It defines all procedures applied to each intervention to ensure consistent and flawless service. From eco-friendly products to secure access management, timely interventions, and attentive follow-up — every aspect is governed by high standards. By adhering to this charter, we guarantee a professional service that meets your expectations with complete peace of mind."
+  },
+  "specs": {
+    "title": "Service Specifications - Cooking",
+    "intro": "Our service consists of providing a qualified employee to carry out home-based cooking tasks according to your needs.",
+    "includedTitle": "Included Tasks",
+    "preparation": {
+      "title": "Culinary Preparation",
+      "point1": "Preparation of fresh meals according to client requests (standard or custom recipes, subject to feasibility).",
+      "point2": "Compliance with dietary instructions (diets, allergies, preferences) if communicated in advance.",
+      "point3": "Ingredient preparation (peeling, cutting, marinating, etc.).",
+      "point4": "Cooking and assembling of meals.",
+      "point5": "Plating before service (upon request)."
+    },
+    "hygiene": {
+      "title": "Hygiene and Organization",
+      "point1": "Basic cleaning of the workspace (work surface, used utensils, sink).",
+      "point2": "Compliance with food hygiene standards.",
+      "point3": "Waste management related to preparation (peelings, packaging, etc.)."
+    },
+    "practical": {
+      "title": "Practical Arrangements",
+      "point1": "Intervention at the client's residence during agreed hours.",
+      "point2": "Adaptation to the number of persons indicated in the booking.",
+      "point3": "Duration determined in advance (per meal or time-based package)."
+    },
+    "excludedTitle": "Excluded Tasks",
+    "excluded": {
+      "point1": "Grocery shopping: The purchase of ingredients remains the client’s responsibility.",
+      "point2": "Utensil provision: The client must provide necessary kitchen equipment (knives, pots, cooking plates, etc.).",
+      "point3": "Table service: The service is limited to cooking (no table service or dishwashing).",
+      "point4": "Deep cleaning: The employee only cleans the workspace and used utensils (no general cleaning unless requested).",
+      "point5": "Child or pet care: The employee is not responsible for individuals or animals on site.",
+      "point6": "Complex dishes without prior notice: Last-minute requests (e.g. elaborate pastries) must be approved in advance."
+    },
+    "conditionsTitle": "General Conditions",
+    "conditions": {
+      "point1": "Ingredients must be available and accessible upon the employee's arrival.",
+      "point2": "Cancellations must be reported at least 24h in advance (except force majeure).",
+      "point3": "Client delays do not automatically extend the service time.",
+      "point4": "The client agrees to provide a safe and functional workspace."
+    }
   }
 }
