--- a/locales/en/en.repairs.json
+++ b/locales/en/en.repairs.json
@@ -49,5 +49,47 @@
   "commitment": {
     "title": "Strict Adherence to Our Service Charter",
     "text": "At Sahel, we strictly adhere to our internal service charter to ensure top-quality service. This document outlines all the procedures we apply to each intervention for consistent and impeccable results. From using eco-friendly products to secure access handling, deadlines, and client follow-up, every part of our work is held to rigorous standards. This ensures a professional service that meets your expectations and gives you peace of mind."
+  },
+  "specs": {
+    "title": "Service Specifications - Small Repairs",
+    "intro": "We provide services at home to carry out small maintenance, repair, or improvement tasks, following a clear and secure process.",
+    "includedTitle": "Included Services",
+    "types": {
+      "title": "Types of Covered Work",
+      "point1": "Light plumbing: Leak repairs, joint replacement, faucet work, simple pipe unclogging, etc.",
+      "point2": "Painting: Painting a room, ceiling, or woodwork (wall preparation not included unless stated).",
+      "point3": "Carpentry / Maintenance: Shelf installation, furniture repair, door/window adjustment, small assemblies.",
+      "point4": "Basic electricity: Replacing switches, wall sockets, light bulbs (no electrical panels).",
+      "point5": "Various repairs: Minor fixes (fence, shutter, simple lock repair, etc.)."
+    },
+    "process": {
+      "title": "Intervention Process",
+      "step1": "1. Quote request: The client describes their needs through our online platform.",
+      "step2": "2. On-site evaluation: A professional visits to assess feasibility and define the needs (travel costs included if the quote is accepted).",
+      "step3": "3. Quote validation: A detailed quote (labor + materials if supplied by us) and a timeline are sent via the platform.",
+      "step4": "4. Payment and planning: The client validates and pays the quote online to start the work.",
+      "step5": "5. Execution: Work is carried out on the agreed dates, with a photo of completed tasks sent via the platform."
+    },
+    "excludedTitle": "Excluded Services",
+    "limits": {
+      "title": "Service Limitations",
+      "point1": "No heavy work: No new constructions, major demolitions or full renovations.",
+      "point2": "No hazardous work: Roofing, high voltage electricity, gas, asbestos, etc.",
+      "point3": "No systematic supply of materials: Unless explicitly stated in the quote.",
+      "point4": "No ten-year warranty: These are minor works (not covered by ten-year legal guarantees)."
+    },
+    "extra": {
+      "title": "Additional Exclusions",
+      "point1": "Material purchase: The client may provide materials or purchase them through our quote.",
+      "point2": "Non-evaluated work: Any task not listed in the original quote will be billed separately.",
+      "point3": "Mandatory platform use: Any request made outside the platform (phone, SMS, etc.) will not be honored."
+    },
+    "conditionsTitle": "General Conditions",
+    "conditions": {
+      "point1": "Cancellation: Free up to 48h before the intervention. After that, fees may apply.",
+      "point2": "Payment: 100% upon quote approval (unless otherwise agreed for large amounts).",
+      "point3": "Timelines: Indicative and subject to external factors (weather, material availability).",
+      "point4": "Photos: Serve as proof of completion"
+    }
   }
 }
