--- a/locales/fr/fr.repairs.json
+++ b/locales/fr/fr.repairs.json
@@ -49,5 +49,47 @@
   "commitment": {
     "title": "Respect Rigoureux de Notre Cahier des Charges",
     "text": "Chez Sahel, nous adhérons strictement à notre propre cahier des charges, conçu pour garantir des prestations de ménage de la plus haute qualité. Ce document définit avec précision les normes et les procédures que nous appliquons lors de chaque intervention, assurant ainsi un service uniforme et irréprochable. De l'utilisation de produits écologiques à la gestion sécurisée des accès, en passant par le respect des délais et la qualité du suivi client, chaque aspect de notre travail est encadré par des standards rigoureux. En respectant ce cahier des charges, nous vous assurons un service de ménage professionnel qui répond à vos attentes, tout en garantissant une sérénité totale."
+  },
+  "specs": {
+    "title": "Cahier des charges",
+    "intro": "Nous intervenons chez les particuliers pour réaliser des petits travaux d’entretien, de réparation ou d’amélioration, selon un processus clair et sécurisé.",
+    "includedTitle": "Prestations couvertes",
+    "types": {
+      "title": "Types de travaux couverts",
+      "point1": "Plomberie légère : Réparation de fuites, changement de joints, robinetterie, débouchage de canalisation simple, etc.",
+      "point2": "Peinture : Repeindre une pièce, un plafond ou des boiseries (préparation des murs non incluse sauf mention contraire).",
+      "point3": "Menuiserie/Entretien : Pose d’étagères, réparation de meubles, ajustement de portes/fenêtres, petits montages.",
+      "point4": "Électricité basique : Remplacement d’interrupteurs, prise murale, ampoules complexes (pas de tableau électrique).",
+      "point5": "Dépannage divers : Réparations mineures (clôture, store, serrurerie simple, etc.)."
+    },
+    "process": {
+      "title": "Processus d’intervention",
+      "step1": "1. Demande de devis : Le client décrit sa demande via notre plateforme en ligne.",
+      "step2": "2. Évaluation sur place : Un professionnel se déplace pour vérifier la faisabilité et préciser les besoins (frais de déplacement inclus si devis accepté).",
+      "step3": "3. Validation et devis : Un devis détaillé (main-d’œuvre + matériaux si fournis par nous) et un délai sont envoyés via la plateforme.",
+      "step4": "4. Paiement et planification : Le client valide et paie le devis en ligne pour lancer les travaux.",
+      "step5": "5. Réalisation : Intervention aux dates convenues, avec envoi d’une photo des travaux terminés via la plateforme."
+    },
+    "excludedTitle": "Prestations non incluses",
+    "limits": {
+      "title": "Limites de la prestation",
+      "point1": "Pas de gros œuvres : Aucune construction neuve, démolition lourde ou rénovation complète.",
+      "point2": "Pas de travaux dangereux : Toiture, électricité haute tension, gaz, amiante, etc.",
+      "point3": "Pas de fourniture systématique de matériaux : Sauf mention explicite dans le devis.",
+      "point4": "Pas de garantie décennale : Ces prestations relèvent de menus travaux (hors champ de la garantie décennale)."
+    },
+    "extra": {
+      "title": "Exclusions supplémentaires",
+      "point1": "Achats de matériaux : Le client peut fournir les matériaux ou les acheter via notre devis.",
+      "point2": "Travaux non évalués : Tout travail non mentionné dans le devis initial sera facturé en supplément.",
+      "point3": "Plateforme obligatoire : Toute demande hors plateforme (téléphone, SMS, etc.) ne sera pas honorée."
+    },
+    "conditionsTitle": "Conditions Générales",
+    "conditions": {
+      "point1": "Annulation : Gratuité jusqu’à 48h avant l’intervention. Passé ce délai, des frais peuvent s’appliquer.",
+      "point2": "Paiement : 100 % à la validation du devis (sauf accord contraire pour les gros montants).",
+      "point3": "Délais : Indicatifs et soumis aux aléas (météo, disponibilité des matériaux).",
+      "point4": "Photos : Servent de preuve de réalisation"
+    }
   }
 }
